# ApiCrudDocker

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.95aa005  Dockerfile  Dump20251003.sql  README.md  alunotablemodel.cpp  alunotablemodel.h  build.gradle.kts  database.cpp  database.h  docker-compose.yml  main.cpp  settings.gradle.kts  telaadicionar.cpp  telaadicionar.h  telaadicionar.ui  telaalterar.cpp  telaalterar.h  telaalterar.ui  telacadastro.cpp  telacadastro.h  telacadastro.ui  telaeditar.cpp  telaeditar.h  telaeditar.ui  telainicial.cpp  telainicial.h  telainicial.ui  telalogin.cpp  telalogin.h  telalogin.ui  telamenu.cpp  telamenu.h  telamenu.ui
gradle/: libs.versions.toml
src/main/kotlin/: Application.kt  Routing.kt
src/main/kotlin/auth/: AuthConfig.kt
src/main/kotlin/controllers/: AlunosController.kt  RegisterController.kt  ResponsavelController.kt  UsuarioController.kt
src/main/kotlin/database/: DatabaseFactory.kt
src/main/kotlin/models/: AlunoResponsavel.kt  AlunoResponsavelList.kt  AlunoResponsavelSearch.kt  AlunoResponsavelUpdate.kt  Alunos.kt  Responsavel.kt  Usuarios.kt
src/main/kotlin/routes/: AlunoResponsavelRoutes.kt  AlunoRoutes.kt  AuthRoutes.kt  RegisterRoute.kt  UsuarioRoutes.kt
src/main/kotlin/services/: AlunoService.kt  ResponsavelService.kt  UsuarioService.kt
src/main/kotlin/tables/: Alunos.kt  Responsavel.kt  Usuarios.kt
src/main/kotlin/utils/: Env.kt  SecurityUtils.kt
